--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
     "@tippyjs/react": "^4.2.6",
+    "@types/apollo-upload-client": "^17.0.0",
+    "apollo-upload-client": "^17.0.0",
     "framer-motion": "^5.6.0",
+    "graphql": "^16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
